--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Erick Bernardo</h1>
-      <p>I'm <span class="typed" data-typed-items="Data Analyst, Digital Analytics Specialist"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Data Analyst, Data Science Specialist"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/erickbernardo10/?locale=en_US" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/ErickBernardo" class="github"><i class="bx bxl-github"></i></a>
@@ -79,12 +79,11 @@
         <div class="section-title" >
           <h2>About</h2>
           <p align="left">
-            I am passionate about the world of technology, data science and digital marketing. 
+           I am passionate about the world of technology, AI, data science and digital marketing.
           </p>
           <br>
           <P align="left">
-            I am an expert in data analysis and BI, I aim to maximize the sales results of companies, applying a data-driven culture to create conversion funnels aligned with the digital strategy of the business.
-          </P>
+            I am a BI analyst at MadeiraMadeira, the largest home products platform in Latin America. With experience in market intelligence and sales, my goal is to transform data into relevant information to support business teams in decision-making.           </P>
           <br>         
           <P align="left">
             I work with data analysis of digital marketing and digital media, social analytics, web analytics, SEM, CRO, tagging (GTM), and Ads management in Google Ads and Facebook Ads. Experience with Google Analytics (GA4), as well as experience in developing dashboards in Data Studio and Power BI using strategic insights and storytelling.
@@ -99,7 +98,7 @@
           </P>
           <br>
           <p align="left">
-            Knowledge in: SQL, Python/R, Machine Learning, statistics, ETL/ELT, Oracle OBIEE/OTBI/BI Publisher, wordpress + elementor, sales funnel and digital marketing strategies.
+           Knowledge in: SQL, Python/R, Machine Learning, statistics, ETL/ELT, Oracle OBIEE/OTBI/BI Publisher, Looker, sales funnel and digital marketing strategies.  
           </p>
 
         </div>
@@ -109,9 +108,9 @@
             <img src="assets/img/profile-02.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3> Data Analyst &amp; BI & Digital Analytics.</h3>
+            <h3> BI & Data Analysis &amp; Market and Sales Intelligence.</h3>
             <p class="fst-italic">
-              Data Analyst | BI & Digital Analytics | Paid ADs Manager / SEM/ CRO | Oracle Cloud Consultant
+              BI & Data Analysis | Market and Sales Intelligence | BI & Oracle Cloud Consultant
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -235,14 +234,14 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Oracle BI Enterprise Edition <i class="val">ADVANCED</i></span>
+              <span class="skill">Google Looker <i class="val">ADVANCED</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Oracle Analytics Cloud <i class="val">ADVANCED</i></span>
+              <span class="skill">Oracle Analytics Cloud / Oracle BI EE <i class="val">ADVANCED</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -361,7 +360,22 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Data Analyst | BI & Digital Analytics | Paid ADs Manager / SEM/ CRO</h4>
+              <h4>BI Analyst | Commercial Planning </h4>
+              <h5> 2022 - Today </h5>
+              <p><em> MadeiraMadeira | Curitiba, Brazil </em></p>
+              <p><em>Data analysis for market and sales intelligence, translating data into relevant information to support business teams in decision-making: </em></p>
+              <ul>
+                <li>Creation and maintenance of dashboards in Looker that answer questions for business analysis and decision-making;</li>
+                <li>Development of a market data cube and crawler cube for market share and competitiveness analysis dashboards;</li>
+                <li>Developing and maintaining data architectures, data models and pipelines (database, SQL, ETL, DAGs, Apache Airflow);</li>
+                <li>Modeling and governance of market databases, crawlers, business targets and various databases;</li>
+                <li>Documentation and automation of processes in the area;</li>
+                <li>Experience in Digital Launches and Perpetual Products;</li>
+                <li>Migration of area reports to Looker.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Data Analyst | BI & Digital Analytics | Paid ADs Manager </h4>
               <h5>07/2021 - Today</h5>
               <p><em>My own business | Self-employed, Brazil </em></p>
               <p><em>Experience with Performance Marketing: </em></p>
